--- a/TBayEat_GroupProject/TBayEat_GroupProject.csproj
+++ b/TBayEat_GroupProject/TBayEat_GroupProject.csproj
@@ -124,6 +124,11 @@
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="HomePage.aspx" />
+    <Content Include="images\contactus.png" />
+    <Content Include="images\cuate.png" />
+    <Content Include="images\sample1.png" />
+    <Content Include="images\sample2.png" />
+    <Content Include="images\sample3.png" />
     <Content Include="Login.aspx" />
     <Content Include="Master\FrontEnd.Master" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
@@ -157,7 +162,9 @@
     <Content Include="Scripts\WebForms\WebUIValidation.js" />
     <Content Include="SignUp.aspx" />
     <Content Include="Site.Master" />
+    <Content Include="Style\homepage.css" />
     <Content Include="Style\Main.css" />
+    <Content Include="Style\reset.css" />
     <Content Include="ViewSwitcher.ascx" />
     <Content Include="Web.config" />
     <Content Include="Bundle.config" />
