--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /.vs/ASPProject/v16/.suo
+ .vs/TBayEat_GroupProject/v16/.suos
