--- a/TBayEat_GroupProject/Web.config
+++ b/TBayEat_GroupProject/Web.config
@@ -7,6 +7,11 @@
 	<system.webServer>
 		<directoryBrowse enabled="true" />
 	</system.webServer>
+	<connectionStrings>
+		<add name="TBayEatConnection"
+    providerName="System.Data.SqlClient"
+    connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=TBayEat;Integrated Security=True;MultipleActiveResultSets=True"/>
+	</connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
@@ -18,6 +23,12 @@
         <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt" />
       </controls>
     </pages>
+	  <membership>
+		  <providers>
+			  <clear/>
+			  <add requiresQuestionAndAnswer="false" name="AspNetSqlMembershipProvider" type="System.Web.Security.SqlMembershipProvider" connectionStringName="TBayEatConnection"/>
+		  </providers>
+	  </membership>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
