--- a/TBayEat_GroupProject/bin/TBayEat_GroupProject.dll.config
+++ b/TBayEat_GroupProject/bin/TBayEat_GroupProject.dll.config
@@ -16,7 +16,7 @@
     </handlers>
   </system.webServer>
   <connectionStrings>
-    <add name="TBayEatConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=TbayEat1;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" />
+    <add name="TBayEatConnection" providerName="System.Data.SqlClient" connectionString="Data Source=LAPTOP-2CC0J3B6\SQLEXPRESS;Initial Catalog=TbayEat1;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"/>
   </connectionStrings>
   <system.web>
     <httpHandlers>
