--- a/TBayEat_GroupProject/TBayEat_GroupProject.csproj
+++ b/TBayEat_GroupProject/TBayEat_GroupProject.csproj
@@ -138,7 +138,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="About.aspx" />
-    <Content Include="caterermenumanagement.aspx" />
+    <Content Include="CatererMenuManagement.aspx" />
     <Content Include="CatererProfile.aspx" />
     <Content Include="Contact.aspx" />
     <Content Include="Content\bootstrap-theme.css" />
@@ -146,6 +146,8 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Site.css" />
+    <Content Include="CustomerOrder.aspx" />
+    <Content Include="CustomerProfile.aspx" />
     <Content Include="Dashboard.aspx" />
     <Content Include="Style\catererprofile.css" />
     <Content Include="Reports.aspx" />
@@ -206,7 +208,7 @@
     <Content Include="Style\Main.css" />
     <Content Include="Style\reset.css" />
     <Content Include="Style\signup.css" />
-    <Content Include="Style\stylesheet2.css" />
+    <Content Include="Style\caterermanagementpage.css" />
     <Content Include="ViewSwitcher.ascx" />
     <Content Include="Web.config" />
     <Content Include="Bundle.config" />
@@ -222,12 +224,12 @@
       <DependentUpon>About.aspx</DependentUpon>
     </Compile>
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="caterermenumanagement.aspx.cs">
-      <DependentUpon>caterermenumanagement.aspx</DependentUpon>
+    <Compile Include="CatererMenuManagement.aspx.cs">
+      <DependentUpon>CatererMenuManagement.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="caterermenumanagement.aspx.designer.cs">
-      <DependentUpon>caterermenumanagement.aspx</DependentUpon>
+    <Compile Include="CatererMenuManagement.aspx.designer.cs">
+      <DependentUpon>CatererMenuManagement.aspx</DependentUpon>
     </Compile>
     <Compile Include="CatererProfile.aspx.cs">
       <DependentUpon>CatererProfile.aspx</DependentUpon>
@@ -242,6 +244,20 @@
     </Compile>
     <Compile Include="Contact.aspx.designer.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="CustomerOrder.aspx.cs">
+      <DependentUpon>CustomerOrder.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="CustomerOrder.aspx.designer.cs">
+      <DependentUpon>CustomerOrder.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="CustomerProfile.aspx.cs">
+      <DependentUpon>CustomerProfile.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="CustomerProfile.aspx.designer.cs">
+      <DependentUpon>CustomerProfile.aspx</DependentUpon>
     </Compile>
     <Compile Include="Dashboard.aspx.cs">
       <DependentUpon>Dashboard.aspx</DependentUpon>
